main.css
/* COLOR OPTIONS */
/* 
#abb8c3
#f78da7 pale-pink
#cf2e2e vivid-red
#ff6900 vivid-orange
#fcb900 vivd-amber
#7bdcb5 vivd-green-cyan
#00d084 light-green-cyan
#8ed1fc pale-cyan-blue
#0693e3 vivd-cyan-blue
#9b51e0 vivd-purple
#0073e6 main-blue
rgba(0,115,230,0.88)
linear-gradient(135deg,rgba(6,147,227,1) 0%,rgb(155,81,224) 100%)
linear-gradient(135deg,rgb(2,3,129) 0%,rgb(40,116,252) 100%)
linear-gradient(135deg,rgb(255,203,112) 0%,rgb(199,81,192) 50%,rgb(65,88,208) 100%) 
*/

.hidden {
    display: none;
}

/* NAVBAR */
#navMain {
    background-color: rgb(240, 248, 255, 0.65);
    backdrop-filter: blur(8px) contrast(100%);
    -webkit-backdrop-filter: blur(8px) contrast(100%);
}


#titleLogo {
    border: 5px solid black;
    max-height: 80px;
}

.navbar-brand {
    display: inline-block;
}

.links {
    margin: auto 6px;
    /* border: 1px solid black; */
    border-radius: 5px;
    text-align: center;
    padding: 3px 10px;
    font-size: calc(8px + 0.5vw);
    white-space: nowrap;
    box-shadow: 1px 1px 2px rgb(0, 0, 0, 0.45);
    background-color: #0693e3;
    color: white;
}

.links:hover {
    background-color: white;
    color: #0693e3;
}

@media screen and (max-width: 1199.5px) {
    .links {
        margin: 5px 0px;
    }

    #hamburgerList {
        float: right;
        background-color: aliceblue;
        border-radius: 5px;
        padding: 5px 20px;
    }

    #navMain {
        background-color: rgb(240, 248, 255, 0.05);
    }
}

/* GLOBAL CSS */
* {
    font-family: 'Roboto', sans-serif;
}

body {
    padding-top: 105px;
}

.topRow {
    border: 1px solid red;
    display: flex;
    justify-content: center;
}

.topDiv {
    width: 98vw;
    height: 70vh;
    position: relative;
    background-size: 100vw 70vh;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.heroDiv {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgb(0, 115, 230, 0.68);
}

.heroTextRow {
    display: flex;
    justify-content: center;
    text-align: center;
}

.heroTextDiv {
    border: 1px solid black;
    color: white;
}

.heroText{
    font-size: calc(12px + 4.4vw);
}

h3 {
    font-size: calc(12px + 1.4vw);
}

.secondRow {
    margin: 50px auto;
    display: flex;
    justify-content: center;
    border: 1px solid red;
}

.boxes {
    text-align: center;
    border: 1px solid black;
    border-radius: 5px;
    box-shadow: 1px 1px 2px rgb(0, 0, 0, 0.45);
}

.thirdRow {
    display: flex;
    justify-content: center;
    border: 1px solid black;
}

.contactForms {
    /* display: inline-block; */
    list-style: none;
}

.formTitle {
    font-size: calc(12px + 1.4vw);
}

.formDiv {
    /* border: 1px solid black; */
    border-radius: 5px;
    background-color: rgb(142, 209, 252, 0.8);
    text-align: center;
    margin: 25px 0;
    padding: 30px 0px 20px 0px;
}

.textbox {
    margin: 10px auto;
    width: 30vw;
    height: 6vh;
    text-align: center;
    border-radius: 5px;
}

.messageBox {

}

.send {
    background-color: white;
    color: rgb(142, 209, 252);
    font-size: calc(12px + 1vw);
    border-radius: 5px;
}

.fourthRow {
    display: flex;
    justify-content: center;
    margin: 20px auto;
}

.legalText {
    font-size: calc(6px + 0.35vw);
}

/* FIRST ROW MAIN PAGE */
#topDivMain {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372730/LEARCO/Diverse2.jpg");
}

#mainPageHero {
    margin-top: 22vh;
}


/* SECOND ROW MAIN PAGE */
#headshotDiv {
    /* border: 1px solid black; */
    display: flex;
    justify-content: center;
}

#headshot {
    width: 45%;
}

#welcomeMsgDiv {
    position: relative;
	background: #00aabb;
	border-radius: .4em;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}
    
#welcomeMsgDiv:after {
    content: '';
    position: absolute;
    left: 0;
    top: 50%;
    width: 0;
    height: 0;
    border: 82px solid transparent;
    border-right-color: #00aabb;
    border-left: 0;
    border-top: 0;
    margin-top: -41px;
    margin-left: -82px;
}


/* THIRD ROW MAIN PAGE */



/* BUSINESS CAPITAL PAGE */
#topDivBiz {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372783/LEARCO/Diverse6.jpg");
}

#bizPageHero {
    margin-top: 15vh;
}

.bizCapBoxes {
    margin: 5px 10px auto 10px;
    min-height: 30vh;
    padding-top: 15px;
    color: white;
    font-size: calc(10px + 0.4vw);
}

.bizCapBoxAlt {
    margin-top: 50px;
    background-color: #f78da7;
}

@media screen and (max-width: 768px) {
    .bizCapBoxes {
        margin-top: 15px;
    }

}


/* EMP PAY ANYDAY PAGE */
#topDivEmpPay {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372765/LEARCO/Diverse7.jpg");
}

#empPayPageHero {
    margin-top: 12vh;
}

#empPayDiv {
    border: 1px solid black;
    background-color: rgb(0, 208, 132, 0.95);
    display: block;
    text-align: center;
    margin-top: -10vh;
    z-index: 1;
    border-radius: 5px;
    box-shadow: 1px 1px 2px rgb(0, 0, 0, 0.45);
}

#handOutIcon {
    font-size: calc(12px + 2.6vw);
    margin: 15px auto;
    /* border: 1px solid black; */
    display: inline-block;
}


/* R&D TAX PAGE */
#topDivRdTax {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372761/LEARCO/Diverse1.jpg");
}

#rdTaxPageHero {
    margin-top: 15vh;
}

.rdTaxBoxes {
    margin: 15px 5px;
    padding-bottom: 15px;
}

.rdTaxIcons {
    margin-top: 5vh;
    font-size: calc(12px + 2vw);
}

#rdTaxDescriptor {
    display: block;
    align-items: center;
    border: 1px solid black;
    margin: 15px auto;
    background-color: rgb(155, 81, 224, 0.8);
}


/* ASSET BACKED PAGE */
#topDivAsset {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1677372737/LEARCO/Diverse3.jpg");
}

#assetPageHero {
    margin-top: 15vh;
}

#assetDescriptor {
    display: flex;
    justify-content: center;
    padding: 10px 0;
}

.assetBoxes {
    text-align: center;
    background-color: aliceblue;
    border: 1px solid aliceblue;
    border-radius: 5px;
    padding: 10px auto;
}

.assetIconDiv {
    margin: 20px auto;
}

.assetIcons {
    font-size: calc(12px + 3vw);
}

.assetDescriptors {
    font-size: calc(12px + 1.6vw);
}


/* ERTC PAGE */
#topDivErtc {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1678301246/LEARCO/Diverse4.jpg");
}

#ertcPageHero {
    margin-top: 12vh;
}

#ertcDescriptorDiv {
    text-align: center;
    background-color: #f78da7;
    border-radius: 5px;
}

#ertcDescriptorTitle {
    margin-top: 25px;
}

#ertcDescriptorsRow {
    margin: 30px auto;
}

.ertcDescriptorDivs {
    margin: 30px auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.ertcDescriptors {
    /* border: 1px solid black; */
    font-size: calc(12px + 1vw);
    margin: 35px auto;
}



/* PAYMENT PROCESSING PAGE */
#topDivPayProcess {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1678301248/LEARCO/Diverse5.jpg");
}

#payProcessPageHero {
    margin-top: 24vh;
}

#payProcessDealDiv {
    display: flex;
    justify-content: center;
}

#payProcessDescriptorPic {
    width: 80%;
}


/* EQUIP FIN PAGE */
#topDivEquipFin {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1678323642/LEARCO/equip3.jpg");
}

#equipFinPageHero {
    margin-top: 22vh;
}

.equipFinDescriptorDivs {
    text-align: center;
    background-color: #0693e3;
    border-radius: 5px;
    padding: 50px 0;
}

.equipFinIcons {
    font-size: calc(12px + 2vw);
    margin: 10px auto;
}

/* BIZ CONSULT PAGE */
#topDivBizConsult {
    background-image: url("https://res.cloudinary.com/learicist/image/upload/v1678301236/LEARCO/Diverse8.jpg");
}

#bizConsultPageHero {
    margin-top: 15vh;
}

#bizConsultDescriptorDiv {
    background-color: #f78da7;
    border-radius: 5px;
    padding: 30px 5px;
    text-align: center;
}


/* FOOTER ALL PAGES */
/* #footBox {

} */

#footRow {
    padding: 15px 0;
    display: flex;
    justify-content: center;
    border: 1px solid black;
    background-color: rgb(252, 185, 0, 0.85);
}

#footTag {
    text-align: center;
}

#learicist {
    color: black;
}

